--- a/Blog.css
+++ b/Blog.css
@@ -6,6 +6,12 @@ body, html {
    src: url(I_AM_SHERLOCKED.ttf);
 }
 
+.navbar-fixed-top.scrolled {
+  background-color: rgb(235,235,235) !important;
+  transition: background-color 500ms linear;
+}
+
+
 #hov_skills:hover{
   text-decoration: underline;
 }
@@ -35,18 +41,27 @@ img:hover{
   opacity: 1;
 }
 
-.parallax1 {
+#parallax1 {
      background-image: url('See_through_glasses.jpg');
-
+     opacity: 0.8;
+   
     height: 100%;
+
+
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
+#parallax1 h1 {
+  opacity: 1;
+}
+
 .parallax2 {
     background-image: url('Guy_back.jpg');
+
+
     height: 500px;;
 
     background-attachment: fixed;
@@ -56,8 +71,7 @@ img:hover{
 }
 
 .parallax3 {
-    background-image: url('Male.jpg');
-
+    background-image: url('Male.jpg')
     height: 400px;
     background-attachment: fixed;
     background-position: center;
